<resources>
    <string name="app_name">Masterkey Accessory - KeePass 2</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="descText_resc">App to use with KeePass 2.0, stores Masterkey. Extract Masterkey by typing in password associated with it. Go into Settings first!</string>
    <string name="pw_resc">Enter password</string>
    <string name="button_resc">Send</string>
    <string name="app_config">Configuration</string>
    <string name="title_activity_config">Settings</string>
    <string name="setting_desc_str">This is the Settings screen. Here, you can configure the Master password, as well as the password you\'d like to use for confirmation. </string>
    <string name="btn_save_settings">Export/Save Settings</string>
    <string name="settings_key_prompt">Enter masterkey</string>
    <string name="settings_pw_prompt">Enter security PW</string>
    <string name="settings_import">Import Settings</string>
</resources>
