<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.soren.masterkeyapplication.ConfigActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/setting_desc_str"
        android:id="@+id/settings_desc"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_save_settings"
        android:id="@+id/btn_save_settings"
        android:layout_below="@+id/conf_pw_settings"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp"
        android:onClick="save_settings"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/masterkey_pw_settings"
        android:hint="@string/settings_key_prompt"
        android:layout_marginTop="46dp"
        android:layout_below="@+id/settings_desc"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/conf_pw_settings"
        android:hint="@string/settings_pw_prompt"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_import"
        android:id="@+id/btn_import_settings"
        android:layout_below="@+id/btn_save_settings"
        android:layout_centerHorizontal="true"
        android:onClick="import_settings"/>
</RelativeLayout>
